<resources>
    <string name="app_name">누트리</string>
    <string name="navigation_drawer_open">열기 </string>
    <string name="navigation_drawer_close">닫기 </string>
    <string name="nav_header_title">누트리</string>
    <string name="nav_header_subtitle">wlgshp@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>

    <string name="menu_dailyIntake">일일섭취량</string>
    <string name="menu_stretchReminder">스트레칭 리마인더</string>
    <string name="menu_SDiary">S-Diary</string>
    <string name="menu_streamView">건강 동영상</string>
    <string name="menu_query">1:1문의</string>

    <string name="menu_search">검색</string>

    <string name="selection_previous">이전메뉴</string>
    <string name="selection_refresh">새로고침</string>
    <string name="selection_home">홈</string>
    <string name="selection_streamView">건강 동영상</string>
    <string name="selection_notice">공지사항</string>
    <string name="sign_up"><u>가입하기</u></string>

    <string name="notification_channel_id">"notification_channel_id"</string>
    <string name="notification_channel_name">"notification_channel_name"</string>





</resources>
